<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.text.TextUtils" />

        <variable
            name="isLoading"
            type="Boolean" />

        <variable
            name="contributorDetail"
            type="com.example.github_contributor_search.service.ContributorDetail" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/load_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:text="@string/loading"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/progressBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ConstraintLayout"
            app:visibleGone="@{isLoading}" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_constraintBottom_toTopOf="@+id/ConstraintLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/load_text"
            app:visibleGone="@{isLoading}" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ConstraintLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:visibleGone="@{!isLoading}">

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/contributorDetail_login_text"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.293" />

            <TextView
                android:id="@+id/contributorDetail_login_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@{contributorDetail.login}"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/name"
                app:layout_constraintTop_toTopOf="@+id/name" />

            <TextView
                android:id="@+id/company"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/company"
                app:layout_constraintStart_toStartOf="@+id/name"
                app:layout_constraintTop_toBottomOf="@+id/name" />

            <TextView
                android:id="@+id/contributorDetail_company_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text='@{TextUtils.isEmpty(contributorDetail.company) ? "未入力" : contributorDetail.company}'
                app:layout_constraintStart_toEndOf="@+id/company"
                app:layout_constraintTop_toTopOf="@+id/company" />

            <TextView
                android:id="@+id/contributorDetail_location_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text='@{TextUtils.isEmpty(contributorDetail.location) ? "未入力" : contributorDetail.location}'
                app:layout_constraintStart_toEndOf="@+id/location"
                app:layout_constraintTop_toTopOf="@+id/location" />

            <TextView
                android:id="@+id/location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/location"
                app:layout_constraintStart_toStartOf="@+id/company"
                app:layout_constraintTop_toBottomOf="@+id/contributorDetail_company_text" />

            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                app:layout_constraintStart_toStartOf="@+id/public_repos_text"
                app:layout_constraintTop_toBottomOf="@+id/contributorDetail_public_repos_text" />

            <TextView
                android:id="@+id/contributorDetail_email_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text='@{TextUtils.isEmpty(contributorDetail.email) ? "未入力" : contributorDetail.email}'
                app:layout_constraintStart_toEndOf="@+id/email"
                app:layout_constraintTop_toTopOf="@+id/email" />

            <TextView
                android:id="@+id/blog_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/blog"
                app:layout_constraintStart_toStartOf="@+id/email"
                app:layout_constraintTop_toBottomOf="@+id/contributorDetail_email_text" />

            <TextView
                android:id="@+id/contributorDetail_blog_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text='@{TextUtils.isEmpty(contributorDetail.blog) ? "未入力" : contributorDetail.blog}'
                app:layout_constraintStart_toEndOf="@+id/blog_text"
                app:layout_constraintTop_toTopOf="@+id/blog_text" />

            <TextView
                android:id="@+id/public_repos_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/public_repos"
                app:layout_constraintStart_toStartOf="@+id/follower_text"
                app:layout_constraintTop_toBottomOf="@+id/contributorDetail_follower_text" />

            <TextView
                android:id="@+id/contributorDetail_public_repos_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text='@{TextUtils.isEmpty(contributorDetail.public_repos) ? "未入力" : contributorDetail.public_repos}'
                app:layout_constraintStart_toEndOf="@+id/public_repos_text"
                app:layout_constraintTop_toTopOf="@+id/public_repos_text" />

            <TextView
                android:id="@+id/follower_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/follower"
                app:layout_constraintStart_toStartOf="@+id/following_text"
                app:layout_constraintTop_toBottomOf="@+id/contributorDetail_following_text" />

            <TextView
                android:id="@+id/contributorDetail_follower_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text='@{TextUtils.isEmpty(contributorDetail.followers) ? "未入力" : contributorDetail.followers}'
                app:layout_constraintStart_toEndOf="@+id/follower_text"
                app:layout_constraintTop_toTopOf="@+id/follower_text" />

            <TextView
                android:id="@+id/contributorDetail_following_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text='@{TextUtils.isEmpty(contributorDetail.following) ? "未入力" : contributorDetail.following}'
                app:layout_constraintStart_toEndOf="@+id/following_text"
                app:layout_constraintTop_toTopOf="@+id/following_text" />

            <TextView
                android:id="@+id/following_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/following"
                app:layout_constraintStart_toStartOf="@+id/location"
                app:layout_constraintTop_toBottomOf="@+id/contributorDetail_location_text" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>